# OpenBIM

./: .gitignore  README.md  pyproject.toml
models/: Painter_Street_v1.2.b2k  Tower.s2k  WaterTower.s2k
models/Analysis/: BatchTimes-03-06.txt  EQ6-006.txt  EQ6-010-long.txt  EQ6-010-trans.txt  EQ6-011.txt  Example 1-001.s2k  Example 1-002a.s2k  Example 1-002b.s2k  Example 1-003.s2k  Example 1-004.s2k  Example 1-005a.s2k  Example 1-005b.s2k  Example 1-005c.s2k  Example 1-005d.s2k  Example 1-005e.s2k  Example 1-005f.s2k  Example 1-006a.s2k  Example 1-006b.s2k  Example 1-007a.s2k  Example 1-007b.s2k  Example 1-007c.s2k  Example 1-008.s2k  Example 1-009a.s2k  Example 1-009b.s2k  Example 1-009c.s2k  Example 1-010a.s2k  Example 1-010b.s2k  Example 1-010c.s2k  Example 1-010d.s2k  Example 1-011.s2k  Example 1-012a.s2k  Example 1-012b.s2k  Example 1-012c.s2k  Example 1-013a.s2k  Example 1-013b.s2k  Example 1-013c.s2k  Example 1-014a.s2k  Example 1-014b.s2k  Example 1-014c.s2k  Example 1-014d.s2k  (+246 more)
models/CurvedSegmental/: CurvedSegmental.b2k
src/openbim/: __main__.py
src/openbim/csi/: __init__.py  __main__.py  config.py  frame.py  link.py  parse.py  pattern.py  point.py  schema.py  schemas.json  tables.py  utility.py
src/openbim/csi/api/: etabs_utilities.py  general_utilities.py  main.py  opensees_postprocessor.py  opensees_utilities.py
src/openbim/ifc/: __main__.py  analysis.py  export.py  meshing.py  requirements.txt
src/openbim/inp/: __init__.py  parser.py
src/openbim/msh/: __init__.py  element.py  nodes.py  utils.py  viz.py
src/opencsi/: __main__.py
